# ideate

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: daily.yml  pipeline.yml  platform-shared-ci.yml  poc-autopilot.yml  poc-improve.yml  poc-quality.yml  poc-rescore.yml
dashboard/: app.js  contact.html  index.html  package-lock.json  package.json  styles.css  theme.js  vercel.json
dashboard/api/: ideas.js  issues.js
dashboard/scripts/: check-dashboard-env.js
examples/: idea.aigodproxy.yaml  idea.budsolvent.yaml  idea.capture.yaml  idea.issuepilot.yaml  idea.ossswarm.yml
hooks/: pre-commit
ideas/ai-invoice-follow-up-assistant/: README.md  acceptance_tests.md  crew_transcripts.md  debate.md  implementation_plan.md  research.md
ideas/harmuaq/: README.md  acceptance_tests.md  crew_transcripts.md  debate.md  implementation_plan.md  research.md
ideas/idea-implementation-ai-agent-crew/: README.md  acceptance_tests.md  debate.md  handoff.md  implementation_plan.md  poc_report.md  research.md
ideas/local-contractor-quote-comparison-tool/: README.md  acceptance_tests.md  crew_transcripts.md  debate.md  implementation_plan.md  poc_report.md  research.md
ideas/medium-article-writer-in-my-style/: README.md  acceptance_tests.md  crew_transcripts.md  debate.md  handoff.md  implementation_plan.md  poc_location.md  poc_report.md  research.md
scripts/: com.ideate.daily.plist  install_git_hooks.py  migrate_ideate_db.py  restore_neon_from_sqlite.py
tests/: test_crew.py  test_security_files.py  test_workflow.py
(+133 files in other folders)
